# formal_hw

./: README.md
practicum_1_task/: CMakeLists.txt  MaxCommonSuffix.cpp  MaxCommonSuffix.h  README.md  main.cpp  tests.cpp
